feat: add OpenPGP key fixtures in `uselesskey-pgp`
- Introduced `uselesskey-pgp` crate for generating OpenPGP key material.
- Implemented `PgpFactoryExt` trait to create PGP keys with various specifications.
- Added tests to validate deterministic and random key generation.
- Updated documentation for `uselesskey-pgp` with usage examples.

feat: add tonic transport TLS adapters in `uselesskey-tonic`

- Introduced `uselesskey-tonic` crate for converting X.509 fixtures to tonic transport types.
- Implemented extension traits for `Identity`, `Certificate`, `ServerTlsConfig`, and `ClientTlsConfig`.
- Added tests to ensure correct configuration of TLS settings.

docs: update architecture and roadmap documentation

- Documented the new `uselesskey-pgp` and `uselesskey-tonic` crates in architecture.md.
- Updated roadmap.md to reflect the addition of OpenPGP and tonic features.
- Revised release.md to include new crates in the publish order.

test: enhance test coverage for new features

- Added tests for PGP key generation and validation.
- Included tests for tonic TLS configuration generation.
- Ensured that changes in PGP and X.509 crates propagate correctly to dependent crates.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ members = [
   "crates/uselesskey-ed25519",
   "crates/uselesskey-hmac",
   "crates/uselesskey-token",
+  "crates/uselesskey-pgp",
   "crates/uselesskey-x509",
   "crates/uselesskey-jsonwebtoken",
   "crates/uselesskey-rustls",
+  "crates/uselesskey-tonic",
   "crates/uselesskey-ring",
   "crates/uselesskey-rustcrypto",
   "crates/uselesskey-aws-lc-rs",
