--- a/crates/uselesskey-aws-lc-rs/Cargo.toml
+++ b/crates/uselesskey-aws-lc-rs/Cargo.toml
@@ -5,10 +5,12 @@ edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "aws-lc-rs integration for deterministic and random cryptographic test fixtures."
+description = "aws-lc-rs adapter traits for uselesskey RSA/ECDSA/Ed25519 fixtures."
 categories = ["development-tools::testing"]
-keywords = ["aws-lc-rs", "fixtures", "testing", "cryptography", "crypto"]
+keywords = ["aws-lc-rs", "signing", "fixtures", "testing", "adapter"]
 readme = "README.md"
+homepage = "https://github.com/EffortlessMetrics/uselesskey"
+documentation = "https://docs.rs/uselesskey-aws-lc-rs"
 authors.workspace = true
 
 [dependencies]
@@ -36,4 +38,5 @@ all = ["native", "rsa", "ecdsa", "ed25519"]
 
 [dev-dependencies]
 uselesskey-core = { path = "../uselesskey-core", version = "0.2.1" }
+
 
