--- a/crates/uselesskey-ecdsa/Cargo.toml
+++ b/crates/uselesskey-ecdsa/Cargo.toml
@@ -5,10 +5,12 @@ edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "ECDSA key fixtures for deterministic and random cryptographic testing."
+description = "ECDSA P-256/P-384 key fixtures (PKCS#8/SPKI, PEM/DER) for tests."
 categories = ["development-tools::testing"]
-keywords = ["ecdsa", "fixtures", "testing", "cryptography", "jwk"]
+keywords = ["ecdsa", "p256", "p384", "fixtures", "testing"]
 readme = "README.md"
+homepage = "https://github.com/EffortlessMetrics/uselesskey"
+documentation = "https://docs.rs/uselesskey-ecdsa"
 authors.workspace = true
 
 [dependencies]
@@ -36,4 +38,5 @@ features = ["jwk"]
 [dev-dependencies]
 proptest.workspace = true
 rstest.workspace = true
+
 
