--- a/crates/uselesskey-ring/Cargo.toml
+++ b/crates/uselesskey-ring/Cargo.toml
@@ -5,10 +5,12 @@ edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "ring 0.17 integration for deterministic and random cryptographic test fixtures."
+description = "ring 0.17 adapter traits for uselesskey RSA/ECDSA/Ed25519 fixtures."
 categories = ["development-tools::testing"]
-keywords = ["ring", "tls", "fixtures", "testing", "cryptography"]
+keywords = ["ring", "signing", "fixtures", "testing", "adapter"]
 readme = "README.md"
+homepage = "https://github.com/EffortlessMetrics/uselesskey"
+documentation = "https://docs.rs/uselesskey-ring"
 authors.workspace = true
 
 [dependencies]
@@ -32,4 +34,5 @@ all = ["rsa", "ecdsa", "ed25519"]
 [dev-dependencies]
 uselesskey-core = { path = "../uselesskey-core", version = "0.2.1" }
 hex = "0.4"
+
 
