--- a/crates/uselesskey/Cargo.toml
+++ b/crates/uselesskey/Cargo.toml
@@ -5,7 +5,7 @@ edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "Runtime cryptographic test fixtures for Rust with deterministic derivation, caching, and negative variants."
+description = "Deterministic cryptographic key and certificate fixtures for Rust tests. Seed-stable, cached, scanner-safe."
 categories = ["development-tools::testing"]
 keywords = ["test", "fixtures", "crypto", "deterministic", "x509"]
 readme = "../../README.md"
