--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,9 +8,12 @@ members = [
   "crates/uselesskey-ecdsa",
   "crates/uselesskey-ed25519",
   "crates/uselesskey-hmac",
+  "crates/uselesskey-token",
+  "crates/uselesskey-pgp",
   "crates/uselesskey-x509",
   "crates/uselesskey-jsonwebtoken",
   "crates/uselesskey-rustls",
+  "crates/uselesskey-tonic",
   "crates/uselesskey-ring",
   "crates/uselesskey-rustcrypto",
   "crates/uselesskey-aws-lc-rs",
