--- a/crates/uselesskey-ecdsa/Cargo.toml
+++ b/crates/uselesskey-ecdsa/Cargo.toml
@@ -1,18 +1,20 @@
 [package]
 name = "uselesskey-ecdsa"
-version = "0.2.0"
+version = "0.3.0"
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "ECDSA key fixtures for uselesskey."
+description = "ECDSA P-256/P-384 key fixtures (PKCS#8/SPKI, PEM/DER) for tests."
 categories = ["development-tools::testing"]
-keywords = ["ecdsa", "fixtures", "testing", "jwk"]
+keywords = ["ecdsa", "p256", "p384", "fixtures", "testing"]
 readme = "README.md"
+homepage = "https://github.com/EffortlessMetrics/uselesskey"
+documentation = "https://docs.rs/uselesskey-ecdsa"
 authors.workspace = true
 
 [dependencies]
-uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
+uselesskey-core = { path = "../uselesskey-core", version = "0.3.0" }
 
 # Elliptic curve support from RustCrypto
 p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
@@ -23,7 +25,7 @@ rand_core.workspace = true
 # Optional JWK/JWKS support
 serde_json = { workspace = true, optional = true }
 base64 = { workspace = true, optional = true }
-uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.2.0", optional = true }
+uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.3.0", optional = true }
 blake3.workspace = true
 
 [features]
