--- a/crates/uselesskey-ed25519/Cargo.toml
+++ b/crates/uselesskey-ed25519/Cargo.toml
@@ -1,18 +1,20 @@
 [package]
 name = "uselesskey-ed25519"
-version = "0.2.0"
+version = "0.3.0"
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "Ed25519 key fixtures for uselesskey."
+description = "Ed25519 key fixtures (PKCS#8/SPKI, PEM/DER) with deterministic generation."
 categories = ["development-tools::testing"]
-keywords = ["ed25519", "fixtures", "testing", "jwk"]
+keywords = ["ed25519", "pkcs8", "spki", "fixtures", "testing"]
 readme = "README.md"
+homepage = "https://github.com/EffortlessMetrics/uselesskey"
+documentation = "https://docs.rs/uselesskey-ed25519"
 authors.workspace = true
 
 [dependencies]
-uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
+uselesskey-core = { path = "../uselesskey-core", version = "0.3.0" }
 ed25519-dalek.workspace = true
 pkcs8.workspace = true
 rand_core.workspace = true
@@ -20,7 +22,7 @@ rand_core.workspace = true
 # Optional JWK/JWKS support
 serde_json = { workspace = true, optional = true }
 base64 = { workspace = true, optional = true }
-uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.2.0", optional = true }
+uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.3.0", optional = true }
 blake3.workspace = true
 
 [features]
