--- a/crates/uselesskey-hmac/Cargo.toml
+++ b/crates/uselesskey-hmac/Cargo.toml
@@ -1,30 +1,31 @@
 [package]
 name = "uselesskey-hmac"
-version = "0.2.0"
+version = "0.3.0"
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "HMAC secret fixtures for testing"
+description = "HMAC HS256/HS384/HS512 secret fixtures for deterministic and random tests."
 categories = ["development-tools::testing"]
-keywords = ["hmac", "fixtures", "testing", "jwk"]
+keywords = ["hmac", "jwt", "fixtures", "testing", "deterministic"]
 readme = "README.md"
+homepage = "https://github.com/EffortlessMetrics/uselesskey"
+documentation = "https://docs.rs/uselesskey-hmac"
 authors.workspace = true
 
 [dependencies]
-uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
+uselesskey-core = { path = "../uselesskey-core", version = "0.3.0" }
 blake3.workspace = true
 rand_core.workspace = true
 
 # Optional JWK/JWKS support
-uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.2.0", optional = true }
+uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.3.0", optional = true }
 base64 = { workspace = true, optional = true }
 
 [package.metadata.docs.rs]
 features = ["jwk"]
 
 [dev-dependencies]
-uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
 base64 = { workspace = true }
 
 [features]
