--- a/crates/uselesskey-jsonwebtoken/Cargo.toml
+++ b/crates/uselesskey-jsonwebtoken/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
 name = "uselesskey-jsonwebtoken"
-version = "0.2.0"
+version = "0.3.0"
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "jsonwebtoken integration for uselesskey test fixtures."
+description = "jsonwebtoken adapter traits for uselesskey fixtures (EncodingKey/DecodingKey)."
 categories = ["development-tools::testing"]
-keywords = ["jwt", "jsonwebtoken", "fixtures", "testing"]
+keywords = ["jwt", "jsonwebtoken", "fixtures", "testing", "adapter"]
 readme = "README.md"
+homepage = "https://github.com/EffortlessMetrics/uselesskey"
+documentation = "https://docs.rs/uselesskey-jsonwebtoken"
 authors.workspace = true
 
 [dependencies]
@@ -17,10 +19,10 @@ authors.workspace = true
 jsonwebtoken = { version = "10", features = ["use_pem"] }
 
 # Key type crates (all optional)
-uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.2.0", optional = true }
-uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.2.0", optional = true }
-uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.2.0", optional = true }
-uselesskey-hmac = { path = "../uselesskey-hmac", version = "0.2.0", optional = true }
+uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.3.0", optional = true }
+uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.3.0", optional = true }
+uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.3.0", optional = true }
+uselesskey-hmac = { path = "../uselesskey-hmac", version = "0.3.0", optional = true }
 
 [package.metadata.docs.rs]
 features = ["all"]
@@ -34,7 +36,7 @@ hmac = ["dep:uselesskey-hmac"]
 all = ["rsa", "ecdsa", "ed25519", "hmac"]
 
 [dev-dependencies]
-uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
+uselesskey-core = { path = "../uselesskey-core", version = "0.3.0" }
 serde.workspace = true
 
 # Enable rust_crypto for tests
