--- a/crates/uselesskey-ring/Cargo.toml
+++ b/crates/uselesskey-ring/Cargo.toml
@@ -1,23 +1,25 @@
 [package]
 name = "uselesskey-ring"
-version = "0.2.0"
+version = "0.3.0"
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "ring 0.17 integration for uselesskey test fixtures."
+description = "ring 0.17 adapter traits for uselesskey RSA/ECDSA/Ed25519 fixtures."
 categories = ["development-tools::testing"]
-keywords = ["ring", "fixtures", "testing", "crypto"]
+keywords = ["ring", "signing", "fixtures", "testing", "adapter"]
 readme = "README.md"
+homepage = "https://github.com/EffortlessMetrics/uselesskey"
+documentation = "https://docs.rs/uselesskey-ring"
 authors.workspace = true
 
 [dependencies]
 ring = "0.17"
 
 # Key type crates (all optional)
-uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.2.0", optional = true }
-uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.2.0", optional = true }
-uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.2.0", optional = true }
+uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.3.0", optional = true }
+uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.3.0", optional = true }
+uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.3.0", optional = true }
 
 [package.metadata.docs.rs]
 features = ["all"]
@@ -30,5 +32,5 @@ ed25519 = ["dep:uselesskey-ed25519"]
 all = ["rsa", "ecdsa", "ed25519"]
 
 [dev-dependencies]
-uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
+uselesskey-core = { path = "../uselesskey-core", version = "0.3.0" }
 hex = "0.4"
