--- a/crates/uselesskey-rustcrypto/Cargo.toml
+++ b/crates/uselesskey-rustcrypto/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
 name = "uselesskey-rustcrypto"
-version = "0.2.0"
+version = "0.3.0"
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "RustCrypto integration for uselesskey test fixtures."
+description = "RustCrypto adapter traits for uselesskey RSA/ECDSA/Ed25519/HMAC fixtures."
 categories = ["development-tools::testing"]
-keywords = ["rustcrypto", "fixtures", "testing", "crypto"]
+keywords = ["rustcrypto", "crypto", "fixtures", "testing", "adapter"]
 readme = "README.md"
+homepage = "https://github.com/EffortlessMetrics/uselesskey"
+documentation = "https://docs.rs/uselesskey-rustcrypto"
 authors.workspace = true
 
 [dependencies]
@@ -20,10 +22,10 @@ hmac = { version = "0.12", optional = true }
 sha2 = { version = "0.10", optional = true }
 
 # Key type crates (all optional)
-uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.2.0", optional = true }
-uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.2.0", optional = true }
-uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.2.0", optional = true }
-uselesskey-hmac = { path = "../uselesskey-hmac", version = "0.2.0", optional = true }
+uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.3.0", optional = true }
+uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.3.0", optional = true }
+uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.3.0", optional = true }
+uselesskey-hmac = { path = "../uselesskey-hmac", version = "0.3.0", optional = true }
 
 [package.metadata.docs.rs]
 features = ["all"]
@@ -37,6 +39,6 @@ hmac = ["dep:hmac", "dep:sha2", "dep:uselesskey-hmac"]
 all = ["rsa", "ecdsa", "ed25519", "hmac"]
 
 [dev-dependencies]
-uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
+uselesskey-core = { path = "../uselesskey-core", version = "0.3.0" }
 sha2 = "0.10"
 rsa = { workspace = true }
