--- a/crates/uselesskey-rustls/Cargo.toml
+++ b/crates/uselesskey-rustls/Cargo.toml
@@ -1,14 +1,16 @@
 [package]
 name = "uselesskey-rustls"
-version = "0.2.0"
+version = "0.3.0"
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "rustls-pki-types integration for uselesskey test fixtures."
+description = "rustls-pki-types and rustls config adapters for uselesskey X.509/key fixtures."
 categories = ["development-tools::testing"]
-keywords = ["rustls", "tls", "fixtures", "testing"]
+keywords = ["rustls", "tls", "fixtures", "testing", "adapter"]
 readme = "README.md"
+homepage = "https://github.com/EffortlessMetrics/uselesskey"
+documentation = "https://docs.rs/uselesskey-rustls"
 authors.workspace = true
 
 [dependencies]
@@ -16,10 +18,10 @@ rustls-pki-types = "1"
 rustls = { version = "0.23", default-features = false, features = ["std", "tls12"], optional = true }
 
 # Key type crates (all optional)
-uselesskey-x509 = { path = "../uselesskey-x509", version = "0.2.0", optional = true }
-uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.2.0", optional = true }
-uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.2.0", optional = true }
-uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.2.0", optional = true }
+uselesskey-x509 = { path = "../uselesskey-x509", version = "0.3.0", optional = true }
+uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.3.0", optional = true }
+uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.3.0", optional = true }
+uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.3.0", optional = true }
 
 [package.metadata.docs.rs]
 features = ["all", "tls-config", "rustls-ring"]
@@ -38,6 +40,6 @@ rustls-ring = ["rustls?/ring"]
 rustls-aws-lc-rs = ["rustls?/aws_lc_rs"]
 
 [dev-dependencies]
-uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
-uselesskey-x509 = { path = "../uselesskey-x509", version = "0.2.0" }
+uselesskey-core = { path = "../uselesskey-core", version = "0.3.0" }
+uselesskey-x509 = { path = "../uselesskey-x509", version = "0.3.0" }
 rustls = { version = "0.23", features = ["ring"] }
