--- a/crates/uselesskey-x509/Cargo.toml
+++ b/crates/uselesskey-x509/Cargo.toml
@@ -1,20 +1,22 @@
 [package]
 name = "uselesskey-x509"
-version = "0.2.0"
+version = "0.3.0"
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "X.509 certificate fixtures for testing"
+description = "X.509 self-signed and chain certificate fixtures with negative variants for tests."
 categories = ["development-tools::testing"]
-keywords = ["x509", "fixtures", "testing"]
+keywords = ["x509", "certificate", "tls", "fixtures", "testing"]
 readme = "README.md"
+homepage = "https://github.com/EffortlessMetrics/uselesskey"
+documentation = "https://docs.rs/uselesskey-x509"
 authors.workspace = true
 
 [dependencies]
-uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
-uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.2.0" }
-uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.2.0", optional = true }
+uselesskey-core = { path = "../uselesskey-core", version = "0.3.0" }
+uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.3.0" }
+uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.3.0", optional = true }
 rcgen = "0.13"
 rustls-pki-types = "1"
 x509-parser = "0.16"
