--- a/crates/uselesskey/Cargo.toml
+++ b/crates/uselesskey/Cargo.toml
@@ -1,30 +1,37 @@
 [package]
 name = "uselesskey"
-version = "0.2.0"
+version = "0.3.0"
 edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 repository.workspace = true
-description = "Runtime-generated key fixtures for tests (no committed PEM blobs)."
+description = "Deterministic cryptographic key and certificate fixtures for Rust tests. Seed-stable, cached, scanner-safe."
 categories = ["development-tools::testing"]
-keywords = ["test", "fixtures", "pem", "pkcs8", "jwks"]
+keywords = ["test", "fixtures", "crypto", "deterministic", "x509"]
 readme = "../../README.md"
+homepage = "https://github.com/EffortlessMetrics/uselesskey"
 documentation = "https://docs.rs/uselesskey"
 authors.workspace = true
+
+[badges]
+github-actions = { repository = "EffortlessMetrics/uselesskey", workflow = "CI" }
+maintenance = { status = "actively-developed" }
 
 [package.metadata.docs.rs]
 features = ["full"]
 
 [dependencies]
-uselesskey-core = { path = "../uselesskey-core", version = "0.2.0" }
+uselesskey-core = { path = "../uselesskey-core", version = "0.3.0" }
 
 # Key type crates - all optional
-uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.2.0", optional = true }
-uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.2.0", optional = true }
-uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.2.0", optional = true }
-uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.2.0", optional = true }
-uselesskey-hmac = { path = "../uselesskey-hmac", version = "0.2.0", optional = true }
-uselesskey-x509 = { path = "../uselesskey-x509", version = "0.2.0", optional = true }
+uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.3.0", optional = true }
+uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.3.0", optional = true }
+uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.3.0", optional = true }
+uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.3.0", optional = true }
+uselesskey-hmac = { path = "../uselesskey-hmac", version = "0.3.0", optional = true }
+uselesskey-token = { path = "../uselesskey-token", version = "0.3.0", optional = true }
+uselesskey-pgp = { path = "../uselesskey-pgp", version = "0.3.0", optional = true }
+uselesskey-x509 = { path = "../uselesskey-x509", version = "0.3.0", optional = true }
 
 [features]
 default = ["rsa"]
@@ -34,6 +41,8 @@ rsa = ["dep:uselesskey-rsa"]
 ecdsa = ["dep:uselesskey-ecdsa"]
 ed25519 = ["dep:uselesskey-ed25519"]
 hmac = ["dep:uselesskey-hmac"]
+token = ["dep:uselesskey-token"]
+pgp = ["dep:uselesskey-pgp"]
 
 # X.509 certificates (implies rsa for now)
 x509 = ["dep:uselesskey-x509", "rsa", "uselesskey-x509/jwk"]
@@ -48,8 +57,8 @@ jwk = [
 ]
 
 # Convenience bundles
-all-keys = ["rsa", "ecdsa", "ed25519", "hmac"]
-full = ["all-keys", "x509", "jwk"]
+all-keys = ["rsa", "ecdsa", "ed25519", "hmac", "pgp"]
+full = ["all-keys", "token", "x509", "jwk"]
 
 [dev-dependencies]
 tempfile.workspace = true
