--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -8,23 +8,23 @@ publish = false
 
 [dependencies]
 # Core
-uselesskey-core = { path = "../crates/uselesskey-core", version = "0.2.0" }
+uselesskey-core = { path = "../crates/uselesskey-core", version = "0.3.0" }
 
 # Key types (all optional features)
-uselesskey-rsa = { path = "../crates/uselesskey-rsa", version = "0.2.0", optional = true, features = ["jwk"] }
-uselesskey-ecdsa = { path = "../crates/uselesskey-ecdsa", version = "0.2.0", optional = true, features = ["jwk"] }
-uselesskey-ed25519 = { path = "../crates/uselesskey-ed25519", version = "0.2.0", optional = true, features = ["jwk"] }
-uselesskey-hmac = { path = "../crates/uselesskey-hmac", version = "0.2.0", optional = true }
-uselesskey-x509 = { path = "../crates/uselesskey-x509", version = "0.2.0", optional = true }
+uselesskey-rsa = { path = "../crates/uselesskey-rsa", version = "0.3.0", optional = true, features = ["jwk"] }
+uselesskey-ecdsa = { path = "../crates/uselesskey-ecdsa", version = "0.3.0", optional = true, features = ["jwk"] }
+uselesskey-ed25519 = { path = "../crates/uselesskey-ed25519", version = "0.3.0", optional = true, features = ["jwk"] }
+uselesskey-hmac = { path = "../crates/uselesskey-hmac", version = "0.3.0", optional = true }
+uselesskey-x509 = { path = "../crates/uselesskey-x509", version = "0.3.0", optional = true }
 
 # JWK/JWKS
-uselesskey-jwk = { path = "../crates/uselesskey-jwk", version = "0.2.0", optional = true }
+uselesskey-jwk = { path = "../crates/uselesskey-jwk", version = "0.3.0", optional = true }
 
 # Adapters
-uselesskey-jsonwebtoken = { path = "../crates/uselesskey-jsonwebtoken", version = "0.2.0", optional = true, features = ["all"] }
-uselesskey-rustls = { path = "../crates/uselesskey-rustls", version = "0.2.0", optional = true, features = ["server-config", "client-config"] }
-uselesskey-ring = { path = "../crates/uselesskey-ring", version = "0.2.0", optional = true, features = ["all"] }
-uselesskey-rustcrypto = { path = "../crates/uselesskey-rustcrypto", version = "0.2.0", optional = true, features = ["all"] }
+uselesskey-jsonwebtoken = { path = "../crates/uselesskey-jsonwebtoken", version = "0.3.0", optional = true, features = ["all"] }
+uselesskey-rustls = { path = "../crates/uselesskey-rustls", version = "0.3.0", optional = true, features = ["server-config", "client-config"] }
+uselesskey-ring = { path = "../crates/uselesskey-ring", version = "0.3.0", optional = true, features = ["all"] }
+uselesskey-rustcrypto = { path = "../crates/uselesskey-rustcrypto", version = "0.3.0", optional = true, features = ["all"] }
 
 # External dependencies
 jsonwebtoken = { workspace = true, optional = true }
@@ -79,6 +79,7 @@ e2e = [
     "dep:uselesskey-jsonwebtoken",
     "dep:uselesskey-rustls",
     "dep:jsonwebtoken",
+    "dep:rustls",
 ]
 
 # Key rotation workflow tests
