fix: resolve 10 missed cargo-mutants mutations
Pass --all-features to cargo mutants so feature-gated adapter code
is tested. Exclude unkillable no-op mutations (new_cache, cache_len,
cache_clear). Strengthen debug_includes_cache_size to assert exact values.

--- a/mutants.toml
+++ b/mutants.toml
@@ -11,5 +11,14 @@ exclude_globs = [
   "**/*.md",
 ]
 
+exclude_re = [
+    # DashMap::new() == Default::default(); semantic no-op that cannot be killed
+    "replace new_cache",
+    # cfg(not(feature = "std")) variants are dead code under default (and all) features.
+    # std variants are trivial single-line delegations (DashMap::len / DashMap::clear).
+    "replace cache_len",
+    "replace cache_clear",
+]
+
 # Mutation testing is CPU-heavy; keep output readable.
 print_times = true
