test: add proptest properties for Token and PGP
- Token: 5 properties (64 cases) covering API key prefix/length,
  bearer base64url validity, OAuth 3-segment format, spec isolation,
  and deterministic stability
- PGP: 4 properties (16 cases, Ed25519 only) covering armor
  parseability, binary parseability, fingerprint stability, and
  fingerprint non-emptiness
- Add proptest dev-dep to both crates

--- a/crates/uselesskey-token/Cargo.toml
+++ b/crates/uselesskey-token/Cargo.toml
@@ -18,3 +18,6 @@ uselesskey-core = { path = "../uselesskey-core", version = "0.3.0" }
 base64.workspace = true
 rand_core.workspace = true
 serde_json.workspace = true
+
+[dev-dependencies]
+proptest.workspace = true
