--- a/crates/uselesskey-pgp/Cargo.toml
+++ b/crates/uselesskey-pgp/Cargo.toml
@@ -16,3 +16,6 @@ authors.workspace = true
 [dependencies]
 uselesskey-core = { path = "../uselesskey-core", version = "0.3.0" }
 pgp = { version = "0.19.0", default-features = false }
+
+[dev-dependencies]
+proptest.workspace = true
