test: add cross-adapter interop tests (ring x rustcrypto)
New test-only crate proving keys work across crypto backends:
- ECDSA P-256: p256 sign -> ring verify
- Ed25519: ed25519-dalek sign -> ring verify
- RSA: rsa crate sign -> ring verify
Each with tamper-rejection counter-tests (6 tests total).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ members = [
   "crates/uselesskey-ring",
   "crates/uselesskey-rustcrypto",
   "crates/uselesskey-aws-lc-rs",
+  "crates/uselesskey-interop-tests",
   "crates/uselesskey-bdd",
   "tests",
   "xtask",
