test: add ECDSA PEM parse and token format fuzz targets
- ecdsa_pkcs8_pem_parse: corrupt good ECDSA P-256 PEM, parse with p256
- token_format: arbitrary seeds, assert format invariants for all 3 specs

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -11,8 +11,9 @@ cargo-fuzz = true
 libfuzzer-sys = "0.4"
 
 # fuzz targets
-uselesskey = { path = "../crates/uselesskey" }
+uselesskey = { path = "../crates/uselesskey", features = ["ecdsa", "token"] }
 rsa = { version = "0.9", features = ["pem", "pkcs8"] }
+p256 = { version = "0.13", features = ["ecdsa", "pkcs8", "pem"] }
 
 [[bin]]
 name = "pem_corrupt"
@@ -29,5 +30,17 @@ doc = false
 [[bin]]
 name = "rsa_pkcs8_pem_parse"
 path = "fuzz_targets/rsa_pkcs8_pem_parse.rs"
+test = false
+doc = false
+
+[[bin]]
+name = "ecdsa_pkcs8_pem_parse"
+path = "fuzz_targets/ecdsa_pkcs8_pem_parse.rs"
+test = false
+doc = false
+
+[[bin]]
+name = "token_format"
+path = "fuzz_targets/token_format.rs"
 test = false
 doc = false
