--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,8 +41,7 @@ blake3 = "1.8.3"
 # concurrency-friendly cache
 dashmap = "6.1.0"
 
-# RNG — pinned to 0.8/0.6/0.3: rsa 0.9 and ed25519-dalek 2 require rand_core 0.6
-rand = "0.8.5"
+# RNG — pinned to 0.6/0.3: rsa 0.9 and ed25519-dalek 2 require rand_core 0.6
 rand_core = "0.6.4"
 rand_chacha = "0.3.1"
 
