--- a/crates/uselesskey-core/Cargo.toml
+++ b/crates/uselesskey-core/Cargo.toml
@@ -17,10 +17,10 @@ authors.workspace = true
 default = ["std"]
 std = [
     "dep:dashmap",
-    "dep:rand",
     "dep:tempfile",
     "thiserror/std",
     "blake3/std",
+    "rand_core/std",
     "rand_chacha/std",
 ]
 
@@ -28,7 +28,6 @@ std = [
 thiserror = { version = "2.0.18", default-features = false }
 blake3 = { version = "1.8.3", default-features = false }
 dashmap = { workspace = true, optional = true }
-rand = { workspace = true, optional = true }
 rand_core.workspace = true
 rand_chacha = { version = "0.3.1", default-features = false }
 tempfile = { workspace = true, optional = true }
