feat: add core keypair crate with PKCS#8/SPKI helpers
- Introduced `uselesskey-core-keypair` crate for reusable key material helpers.
- Implemented `Pkcs8SpkiKeyMaterial` struct with methods for accessing and manipulating PKCS#8 and SPKI key formats.
- Added tests for key material accessors and corruption methods.

feat: add deterministic key-id helpers

- Created `uselesskey-core-kid` crate for generating deterministic key IDs.
- Implemented `kid_from_bytes` function for deriving key IDs from byte arrays.
- Added tests to ensure deterministic behavior of key ID generation.

feat: introduce negative fixture builders

- Added `uselesskey-core-negative` crate for generating corrupted PEM/DER data.
- Implemented various corruption strategies for PEM and DER formats.
- Added tests for corruption functions to ensure stability and uniqueness.

feat: implement tempfile-backed artifact sinks

- Created `uselesskey-core-sink` crate for managing temporary file artifacts.
- Implemented `TempArtifact` struct for creating and managing temporary files.
- Added tests to verify file creation, reading, and cleanup behavior.

feat: define canonical feature and matrix definitions

- Introduced `uselesskey-feature-grid` crate for feature flag and matrix definitions.
- Defined core and BDD feature matrices for automation consistency.
- Added tests to ensure uniqueness and correctness of feature definitions.

feat: add compatibility façade for feature grid

- Created `uselesskey-test-grid` crate as a compatibility layer for `uselesskey-feature-grid`.
- Re-exported feature matrices and constants for backwards compatibility.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,15 @@
 [workspace]
 resolver = "2"
 members = [
+  "crates/uselesskey-test-grid",
+  "crates/uselesskey-feature-grid",
   "crates/uselesskey",
   "crates/uselesskey-core",
+  "crates/uselesskey-core-id",
+  "crates/uselesskey-core-kid",
+  "crates/uselesskey-core-keypair",
+  "crates/uselesskey-core-negative",
+  "crates/uselesskey-core-sink",
   "crates/uselesskey-jwk",
   "crates/uselesskey-rsa",
   "crates/uselesskey-ecdsa",
@@ -19,6 +26,7 @@ members = [
   "crates/uselesskey-aws-lc-rs",
   "crates/uselesskey-interop-tests",
   "crates/uselesskey-bdd",
+  "crates/uselesskey-bdd-steps",
   "tests",
   "xtask",
 ]
@@ -35,6 +43,13 @@ authors = ["Effortless Metrics <opensource@effortlessmetrics.com>"]
 # error handling
 thiserror = "2.0.18"
 
+uselesskey-test-grid = { path = "crates/uselesskey-test-grid", version = "0.3.0" }
+uselesskey-feature-grid = { path = "crates/uselesskey-feature-grid", version = "0.3.0" }
+uselesskey-core-id = { path = "crates/uselesskey-core-id", version = "0.3.0" }
+uselesskey-core-kid = { path = "crates/uselesskey-core-kid", version = "0.3.0" }
+uselesskey-core-keypair = { path = "crates/uselesskey-core-keypair", version = "0.3.0" }
+uselesskey-core-negative = { path = "crates/uselesskey-core-negative", version = "0.3.0" }
+
 # determinism / hashing
 blake3 = "1.8.3"
 
@@ -47,6 +62,7 @@ rand_chacha = "0.3.1"
 
 # sinks
 tempfile = "3.24.0"
+uselesskey-core-sink = { path = "crates/uselesskey-core-sink", version = "0.3.0" }
 
 # testing
 proptest = "1.10.0"
