--- a/crates/uselesskey-bdd/Cargo.toml
+++ b/crates/uselesskey-bdd/Cargo.toml
@@ -6,32 +6,36 @@ edition.workspace = true
 license.workspace = true
 rust-version.workspace = true
 
-[dev-dependencies]
-cucumber.workspace = true
+[dependencies]
+uselesskey-bdd-steps = { path = "../uselesskey-bdd-steps", default-features = false, features = [] }
 tokio.workspace = true
-rsa.workspace = true
-ed25519-dalek.workspace = true
-p256 = { version = "0.13.2", features = ["ecdsa", "pkcs8", "pem"] }
-p384 = { version = "0.13.1", features = ["ecdsa", "pkcs8", "pem"] }
-x509-parser = "0.18.1"
-serde_json.workspace = true
-base64.workspace = true
-pgp = { version = "0.19.0", default-features = false }
-uselesskey = { path = "../uselesskey", default-features = false, features = [] }
-uselesskey-core = { path = "../uselesskey-core" }
+
+[dev-dependencies]
+uselesskey-test-grid.workspace = true
 
 [features]
 default = ["uk-default"]
-uk-default = ["uselesskey/default"]
-uk-all = ["uselesskey/full", "uk-rsa", "uk-ecdsa", "uk-ed25519", "uk-hmac", "uk-pgp", "uk-x509", "uk-jwk", "uk-token"]
-uk-rsa = ["uselesskey/rsa"]
-uk-ecdsa = ["uselesskey/ecdsa"]
-uk-ed25519 = ["uselesskey/ed25519"]
-uk-hmac = ["uselesskey/hmac"]
-uk-pgp = ["uselesskey/pgp"]
-uk-x509 = ["uselesskey/x509"]
-uk-jwk = ["uselesskey/jwk"]
-uk-token = ["uselesskey/token"]
+uk-default = ["uselesskey-bdd-steps/uk-default"]
+uk-all = ["uselesskey-bdd-steps/uk-all", "uselesskey-bdd-steps/uk-rsa", "uselesskey-bdd-steps/uk-ecdsa", "uselesskey-bdd-steps/uk-ed25519", "uselesskey-bdd-steps/uk-hmac", "uselesskey-bdd-steps/uk-pgp", "uselesskey-bdd-steps/uk-x509", "uselesskey-bdd-steps/uk-jwk", "uselesskey-bdd-steps/uk-token", "uselesskey-bdd-steps/uk-jwt", "uselesskey-bdd-steps/uk-core-id", "uselesskey-bdd-steps/uk-core-kid", "uselesskey-bdd-steps/uk-core-keypair", "uselesskey-bdd-steps/uk-core-negative", "uselesskey-bdd-steps/uk-core-sink", "uselesskey-bdd-steps/uk-aws-lc-rs", "uselesskey-bdd-steps/uk-rustls", "uselesskey-bdd-steps/uk-tonic", "uselesskey-bdd-steps/uk-ring", "uselesskey-bdd-steps/uk-rustcrypto"]
+uk-core-id = ["uselesskey-bdd-steps/uk-core-id"]
+uk-core-kid = ["uselesskey-bdd-steps/uk-core-kid"]
+uk-core-keypair = ["uselesskey-bdd-steps/uk-core-keypair"]
+uk-core-negative = ["uselesskey-bdd-steps/uk-core-negative"]
+uk-core-sink = ["uselesskey-bdd-steps/uk-core-sink"]
+uk-jwt = ["uselesskey-bdd-steps/uk-jwt"]
+uk-rsa = ["uselesskey-bdd-steps/uk-rsa"]
+uk-ecdsa = ["uselesskey-bdd-steps/uk-ecdsa"]
+uk-ed25519 = ["uselesskey-bdd-steps/uk-ed25519"]
+uk-hmac = ["uselesskey-bdd-steps/uk-hmac"]
+uk-pgp = ["uselesskey-bdd-steps/uk-pgp"]
+uk-x509 = ["uselesskey-bdd-steps/uk-x509"]
+uk-jwk = ["uselesskey-bdd-steps/uk-jwk"]
+uk-token = ["uselesskey-bdd-steps/uk-token"]
+uk-aws-lc-rs = ["uselesskey-bdd-steps/uk-aws-lc-rs"]
+uk-rustls = ["uselesskey-bdd-steps/uk-rustls"]
+uk-tonic = ["uselesskey-bdd-steps/uk-tonic"]
+uk-ring = ["uselesskey-bdd-steps/uk-ring"]
+uk-rustcrypto = ["uselesskey-bdd-steps/uk-rustcrypto"]
 
 [[test]]
 name = "bdd"
