--- a/crates/uselesskey-ed25519/Cargo.toml
+++ b/crates/uselesskey-ed25519/Cargo.toml
@@ -15,6 +15,7 @@ authors.workspace = true
 
 [dependencies]
 uselesskey-core = { path = "../uselesskey-core", version = "0.3.0" }
+uselesskey-core-keypair.workspace = true
 ed25519-dalek.workspace = true
 pkcs8.workspace = true
 rand_core.workspace = true
@@ -23,7 +24,6 @@ rand_core.workspace = true
 serde_json = { workspace = true, optional = true }
 base64 = { workspace = true, optional = true }
 uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.3.0", optional = true }
-blake3.workspace = true
 
 [features]
 default = []
@@ -33,5 +33,6 @@ jwk = ["dep:serde_json", "dep:base64", "dep:uselesskey-jwk"]
 features = ["jwk"]
 
 [dev-dependencies]
+uselesskey-core-kid.workspace = true
 proptest.workspace = true
 rstest.workspace = true
