chore(core): fix no_std feature forwarding for microcrates
Add default-features = false on microcrate dependency edges and forward
std feature to uselesskey-core-id and uselesskey-core-negative. Remove
invalid module-level #![no_std] attributes from id.rs and negative/mod.rs
(only valid at crate root).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,10 +45,10 @@ thiserror = "2.0.18"
 
 uselesskey-test-grid = { path = "crates/uselesskey-test-grid", version = "0.3.0" }
 uselesskey-feature-grid = { path = "crates/uselesskey-feature-grid", version = "0.3.0" }
-uselesskey-core-id = { path = "crates/uselesskey-core-id", version = "0.3.0" }
+uselesskey-core-id = { path = "crates/uselesskey-core-id", version = "0.3.0", default-features = false }
 uselesskey-core-kid = { path = "crates/uselesskey-core-kid", version = "0.3.0" }
 uselesskey-core-keypair = { path = "crates/uselesskey-core-keypair", version = "0.3.0" }
-uselesskey-core-negative = { path = "crates/uselesskey-core-negative", version = "0.3.0" }
+uselesskey-core-negative = { path = "crates/uselesskey-core-negative", version = "0.3.0", default-features = false }
 
 # determinism / hashing
 blake3 = "1.8.3"
